<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_analysis"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/analysis" />

    <item
        android:id="@+id/nav_accounts"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/accounts" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/categories" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />

</menu>

